[package]
name = "signvec"
version = "0.4.1"
edition = "2021"
authors = ["Ayan Das <ayand@iisc.ac.in>"]
license = "MIT"
readme = "README.md"
description = "Vector implementation for fast, sign-based manipulation of dynamic collections."
repository = "https://github.com/b-vitamins/signvec"
documentation = "https://docs.rs/signvec"
keywords = ["vec", "signed", "performance"]
categories = ["data-structures"]
homepage = "https://github.com/b-vitamins/signvec"

[dependencies]
nanorand = "0.7.0"
fastset = "0.5.2"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "signvec"
path = "bench/signvec.rs"
harness = false
